
[TestDetermineInstallCmd_Snapshot/pipenv-with-wsgi - 1]
RUN pip install pipenv
RUN pipenv install gunicorn
COPY Pipfile* .
RUN pipenv install
---

[TestDetermineInstallCmd_Snapshot/poetry-with-wsgi - 1]
RUN pip install poetry
RUN poetry add gunicorn
COPY poetry.lock* pyproject.toml* .
RUN poetry install
---

[TestDetermineInstallCmd_Snapshot/poetry-none - 1]
RUN pip install poetry
COPY poetry.lock* pyproject.toml* .
RUN poetry install
---

[TestDetermineInstallCmd_Snapshot/pipenv-none - 1]
RUN pip install pipenv
COPY Pipfile* .
RUN pipenv install
---

[TestDetermineInstallCmd_Snapshot/pip-with-wsgi - 1]
RUN pip install gunicorn
COPY requirements.txt* .
RUN pip install -r requirements.txt
---

[TestDetermineInstallCmd_Snapshot/pip-none - 1]
COPY requirements.txt* .
RUN pip install -r requirements.txt
---

[TestDetermineInstallCmd_Snapshot/pip-with-fastapi - 1]
RUN pip install uvicorn
COPY requirements.txt* .
RUN pip install -r requirements.txt
---

[TestDetermineInstallCmd_Snapshot/poetry-with-fastapi - 1]
RUN pip install poetry
RUN poetry add uvicorn
COPY poetry.lock* pyproject.toml* .
RUN poetry install
---

[TestDetermineInstallCmd_Snapshot/pipenv-with-fastapi - 1]
RUN pip install pipenv
RUN pipenv install uvicorn
COPY Pipfile* .
RUN pipenv install
---

[TestDetermineInstallCmd_Snapshot/unknown-with-wsgi - 1]
RUN pip install gunicorn
---

[TestDetermineInstallCmd_Snapshot/unknown-with-fastapi - 1]
RUN pip install uvicorn
---

[TestDetermineInstallCmd_Snapshot/unknown-none - 1]
RUN echo "skip install"
---

[TestDetermineStartCmd_Snapshot/pipenv-with-wsgi - 1]
pipenv run gunicorn --bind :8080 wsgi.py
---

[TestDetermineStartCmd_Snapshot/unknown-none - 1]
python app.py
---

[TestDetermineStartCmd_Snapshot/poetry-with-fastapi - 1]
poetry run uvicorn wsgi.py --host 0.0.0.0 --port 8080
---

[TestDetermineStartCmd_Snapshot/unknown-with-fastapi - 1]
uvicorn wsgi.py --host 0.0.0.0 --port 8080
---

[TestDetermineStartCmd_Snapshot/pip-none - 1]
python app.py
---

[TestDetermineStartCmd_Snapshot/unknown-with-wsgi - 1]
gunicorn --bind :8080 wsgi.py
---

[TestDetermineStartCmd_Snapshot/pip-with-wsgi - 1]
gunicorn --bind :8080 wsgi.py
---

[TestDetermineStartCmd_Snapshot/poetry-none - 1]
poetry run python app.py
---

[TestDetermineStartCmd_Snapshot/pip-with-fastapi - 1]
uvicorn wsgi.py --host 0.0.0.0 --port 8080
---

[TestDetermineStartCmd_Snapshot/pipenv-none - 1]
pipenv run python app.py
---

[TestDetermineStartCmd_Snapshot/pipenv-with-fastapi - 1]
pipenv run uvicorn wsgi.py --host 0.0.0.0 --port 8080
---

[TestDetermineStartCmd_Snapshot/poetry-with-wsgi - 1]
poetry run gunicorn --bind :8080 wsgi.py
---

[TestDetermineStartCmd_Snapshot/pipenv-with-static - 1]
/usr/sbin/nginx && pipenv run gunicorn --bind :8000 wsgi.py
---

[TestDetermineStartCmd_Snapshot/pip-with-static - 1]
/usr/sbin/nginx && gunicorn --bind :8000 wsgi.py
---

[TestDetermineStartCmd_Snapshot/unknown-with-static - 1]
/usr/sbin/nginx && gunicorn --bind :8000 wsgi.py
---

[TestDetermineStartCmd_Snapshot/poetry-with-static - 1]
/usr/sbin/nginx && poetry run gunicorn --bind :8000 wsgi.py
---

[TestDetermineInstallCmd_Snapshot/poetry-with-static-nginx-django - 1]
RUN pip install poetry
RUN poetry add gunicorn
COPY poetry.lock* pyproject.toml* .
RUN poetry install
---

[TestDetermineInstallCmd_Snapshot/poetry-with-static-nginx - 1]
RUN pip install poetry
RUN poetry add gunicorn
COPY poetry.lock* pyproject.toml* .
RUN poetry install
---

[TestDetermineInstallCmd_Snapshot/pip-with-static-nginx - 1]
RUN pip install gunicorn
COPY requirements.txt* .
RUN pip install -r requirements.txt
---

[TestDetermineInstallCmd_Snapshot/pip-with-static-django - 1]
RUN pip install gunicorn
COPY requirements.txt* .
RUN pip install -r requirements.txt
---

[TestDetermineInstallCmd_Snapshot/unknown-with-static-django - 1]
RUN pip install gunicorn
---

[TestDetermineInstallCmd_Snapshot/poetry-with-static-django - 1]
RUN pip install poetry
RUN poetry add gunicorn
COPY poetry.lock* pyproject.toml* .
RUN poetry install
---

[TestDetermineInstallCmd_Snapshot/unknown-with-static-nginx-django - 1]
RUN pip install gunicorn
---

[TestDetermineInstallCmd_Snapshot/unknown-with-static-nginx - 1]
RUN pip install gunicorn
---

[TestDetermineInstallCmd_Snapshot/pipenv-with-static-nginx-django - 1]
RUN pip install pipenv
RUN pipenv install gunicorn
COPY Pipfile* .
RUN pipenv install
---

[TestDetermineInstallCmd_Snapshot/pipenv-with-static-nginx - 1]
RUN pip install pipenv
RUN pipenv install gunicorn
COPY Pipfile* .
RUN pipenv install
---

[TestDetermineInstallCmd_Snapshot/pip-with-static-nginx-django - 1]
RUN pip install gunicorn
COPY requirements.txt* .
RUN pip install -r requirements.txt
---

[TestDetermineInstallCmd_Snapshot/pipenv-with-static-django - 1]
RUN pip install pipenv
RUN pipenv install gunicorn
COPY Pipfile* .
RUN pipenv install
---

[TestDetermineInstallCmd_Snapshot/pipenv-with-streamlit-entry - 1]
RUN pip install pipenv
RUN pipenv install streamlit
COPY Pipfile* .
RUN pipenv install
---

[TestDetermineInstallCmd_Snapshot/pip-with-streamlit-entry - 1]
RUN pip install streamlit
COPY requirements.txt* .
RUN pip install -r requirements.txt
---

[TestDetermineInstallCmd_Snapshot/poetry-with-streamlit-entry - 1]
RUN pip install poetry
RUN poetry add streamlit
COPY poetry.lock* pyproject.toml* .
RUN poetry install
---

[TestDetermineInstallCmd_Snapshot/unknown-with-streamlit-entry - 1]
RUN pip install streamlit
---
